--- a/index.html
+++ b/index.html
@@ -368,9 +368,10 @@ for being you 🌸
 Happy Valentine’s Day, BABU 🤍  
 – Yours`;
    window.open(
-    "https://wa.me/?text="+encodeURIComponent(msg),
+    "https://wa.me/917478640411?text=" + encodeURIComponent(msg),
     "_blank"
    );
+
   }
  },3000);
 };
