--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@ for being soft,
 for being you 🌸
 
 Happy Valentine’s Day, BABU 🤍  
-– Yours`;
+– Yours
+*NOW AGAIN JUST GO TO THE BROWSER FOR SOME MORE SURPRISE*
+if possible please unblock me and I'm not disturbing you so frequently but 1 or 2 times within a month`;
    window.open(
     "https://wa.me/917478640411?text=" + encodeURIComponent(msg),
     "_blank"
