--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ button:active{transform:scale(.95)}
 <body>
 
 <!-- MUSIC -->
-<audio id="bgMusic" loop src="https://cdn.pixabay.com/download/audio/2023/03/28/audio_5d5f5a6b2b.mp3"></audio>
+<audio id="bgMusic" loop src="https://pixabay.com/users/andriig-54059306/"></audio>
 
 <!-- HEARTS -->
 <script>
