--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@ button:active{transform:scale(.95)}
 <body>
 
 <!-- MUSIC -->
-<audio id="bgMusic" loop src="https://pixabay.com/users/andriig-54059306/"></audio>
+<audio id="bgMusic" loop preload="auto"
+ src="https://pixabay.com/users/hirohasaimoto-46150359/">
+</audio>
 
 <!-- HEARTS -->
 <script>
